test/corpus/fail/M0088.mo
=========
M0088.mo
=========

await true

---

(source_file
  (exp_dec
    (await_exp
      (lit_exp
        (bool_literal)))))
